# ogre3d-collisions

./: CMakeLists.txt  LICENSE  README.md  resources.cfg
media/: my.material  resources.cfg
src/: config.h  main.cpp
src/app/: App.cpp  App.h  CamGuy.cpp  CamGuy.h
src/collider/: ColCuboid.cpp  ColCuboid.h  Collider.cpp  Collider.h  Edge.cpp  Edge.h  Manager.cpp  Manager.h  Quad.cpp  Quad.h
src/mesh/: Cuboid.cpp  Cuboid.h
